<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:context="com.example.kvega.project4musicstructureapp.StoreActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_store"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_store"
                android:text="@string/label_store"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/CategoryTextStyle"
                android:background="@color/category_store"
                android:text="@string/text_store" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/preview_music_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_music_preview" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_home" />

</LinearLayout>
