<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:context="com.example.kvega.project4musicstructureapp.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_background"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_home" />

                <TextView
                    style="@style/HomeTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/text_home" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/now_playing"
                style="@style/CategoryStyle"
                android:background="@color/category_now_playing"
                android:text="@string/category_now_playing" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/music_library"
                style="@style/CategoryStyle"
                android:background="@color/category_music_library"
                android:text="@string/category_music_library" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/store"
                style="@style/CategoryStyle"
                android:background="@color/category_store"
                android:text="@string/category_store" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/settings"
                style="@style/CategoryStyle"
                android:background="@color/category_settings"
                android:text="@string/category_settings" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
